@@ -806,6 +806,16 @@ class WC_Stripe_Intent_Controller {
 
 		$request = $this->build_base_payment_intent_request_params( $payment_information );
 
+		// Add the updated preferred credit card brand when defined
+		$preferred_brand = $payment_information['payment_method_details']->card->networks->preferred ?? null;
+		if ( isset( $preferred_brand ) ) {
+			$request['payment_method_options'] = [
+				'card' => [
+					'brand' => $preferred_brand,
+				],
+			];
+		}
+
 		$order = $payment_information['order'];
 
 		// Run the necessary filter to make sure mandate information is added when it's required.
