@@ -380,9 +380,9 @@ class WC_Stripe_UPE_Payment_Gateway extends WC_Gateway_Stripe {
 		$stripe_params['cartContainsSubscription']         = $this->is_subscription_item_in_cart();
 
 		// Add appearance settings.
-		$stripe_params['appearance']                       = get_transient( $this->get_appearance_transient_key() );
-		$stripe_params['blocksAppearance']                 = get_transient( $this->get_appearance_transient_key( true ) );
-		$stripe_params['saveAppearanceNonce']              = wp_create_nonce( 'wc_stripe_save_appearance_nonce' );
+		$stripe_params['appearance']          = get_transient( $this->get_appearance_transient_key() );
+		$stripe_params['blocksAppearance']    = get_transient( $this->get_appearance_transient_key( true ) );
+		$stripe_params['saveAppearanceNonce'] = wp_create_nonce( 'wc_stripe_save_appearance_nonce' );
 
 		$cart_total = ( WC()->cart ? WC()->cart->get_total( '' ) : 0 );
 		$currency   = get_woocommerce_currency();
@@ -732,6 +732,7 @@ class WC_Stripe_UPE_Payment_Gateway extends WC_Gateway_Stripe {
 			$this->validate_selected_payment_method_type( $payment_information, $order->get_billing_country() );
 
 			$payment_needed        = $this->is_payment_needed( $order->get_id() );
+			$payment_method        = $payment_information['payment_method_details'];
 			$payment_method_id     = $payment_information['payment_method'];
 			$selected_payment_type = $payment_information['selected_payment_type'];
 			$upe_payment_method    = $this->payment_methods[ $selected_payment_type ] ?? null;
@@ -757,9 +758,6 @@ class WC_Stripe_UPE_Payment_Gateway extends WC_Gateway_Stripe {
 			if ( '' !== $selected_payment_type ) {
 				$this->set_selected_payment_type_for_order( $order, $selected_payment_type );
 			}
-
-			// Retrieve the payment method object from Stripe.
-			$payment_method = WC_Stripe_API::get_payment_method( $payment_method_id );
 
 			// Throw an exception when the payment method is a prepaid card and it's disallowed.
 			$this->maybe_disallow_prepaid_card( $payment_method );
@@ -795,6 +793,16 @@ class WC_Stripe_UPE_Payment_Gateway extends WC_Gateway_Stripe {
 
 			// Set the selected UPE payment method type title in the WC order.
 			$this->set_payment_method_title_for_order( $order, $selected_payment_type );
+
+			// Set the preferred card brand for the order, when set.
+			// Retrieve the preferred card brand for the payment method.
+			$preferred_brand = $payment_method->card->networks->preferred ?? null;
+			if ( WC_Stripe_Co_Branded_CC_Compatibility::is_wc_supported() && $preferred_brand ) {
+				$this->set_preferred_card_brand_for_order( $order, $preferred_brand );
+				if ( function_exists( 'wc_admin_record_tracks_event' ) ) {
+					wc_admin_record_tracks_event( 'wcstripe_co_branded_cc_preferred_brand_selected', [ 'brand' => $preferred_brand ] );
+				}
+			}
 
 			$redirect = $this->get_return_url( $order );
 
@@ -890,7 +898,7 @@ class WC_Stripe_UPE_Payment_Gateway extends WC_Gateway_Stripe {
 			);
 
 			return [
-				'result' => 'failure',
+				'result'   => 'failure',
 				'redirect' => '',
 			];
 		}
@@ -1977,6 +1985,9 @@ class WC_Stripe_UPE_Payment_Gateway extends WC_Gateway_Stripe {
 
 		$payment_method_types = $this->get_payment_method_types_for_intent_creation( $selected_payment_type, $order->get_id() );
 
+		// Retrieve the payment method object from Stripe.
+		$payment_method_details = WC_Stripe_API::get_payment_method( $payment_method_id );
+
 		$payment_information = [
 			'amount'                        => $amount,
 			'currency'                      => $currency,
@@ -1988,6 +1999,7 @@ class WC_Stripe_UPE_Payment_Gateway extends WC_Gateway_Stripe {
 			'order'                         => $order,
 			'payment_initiated_by'          => 'initiated_by_customer', // initiated_by_merchant | initiated_by_customer.
 			'payment_method'                => $payment_method_id,
+			'payment_method_details'        => $payment_method_details,
 			'payment_type'                  => 'single', // single | recurring.
 			'save_payment_method_to_store'  => $save_payment_method_to_store,
 			'selected_payment_type'         => $selected_payment_type,
@@ -2132,6 +2144,17 @@ class WC_Stripe_UPE_Payment_Gateway extends WC_Gateway_Stripe {
 	 */
 	private function set_customer_id_for_order( WC_Order $order, string $customer_id ) {
 		$order->update_meta_data( '_stripe_customer_id', $customer_id );
+		$order->save_meta_data();
+	}
+
+	/**
+	 * Set the preferred card brand for the order.
+	 *
+	 * @param WC_Order $order The order.
+	 * @param string   $brand The value to be set.
+	 */
+	private function set_preferred_card_brand_for_order( WC_Order $order, string $brand ) {
+		$order->update_meta_data( '_stripe_card_brand', $brand );
 		$order->save_meta_data();
 	}
 
